--- a/src/styles/cart.module.css
+++ b/src/styles/cart.module.css
@@ -1,5 +1,59 @@
 .cart_container{
   width: 450px;
-  height: 400px;
-  background: violet;
+  height: 30%;
+  max-height: 70vh;
+
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  overflow-y: scroll;
+  border: 1px solid rgba(0,0,0,.35);
+}
+.cart_container::-webkit-scrollbar{
+  display: none;
+}
+.cart_header{
+  padding-top: 20px;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  height: 60px;
+  border-bottom: 1px solid black;
+}
+.cart_products{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid black;
+}
+.single_product{
+  letter-spacing: 0.6px;
+  font-size: 1.5rem;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+.cart_totalprice{
+  font-size: 1.5rem;
+  text-align: center;
+  margin-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid black;
+}
+.checkout{
+  margin-top: 5px;
+  height: 30px;
+  width: 70%;
+  align-self: center;
+  margin-bottom: 5px;
+  border-radius: 4px;
+  outline: none;
+  border: 1px 
+  solid rgba(0, 0, 0, .2);
+}
+
+.checkout:hover{
+  cursor: pointer;
+}
+.checkout:active{
+  border: 1px solid rgba(0,0,0,.6);
 }
