--- a/src/styles/homeproducts.module.css
+++ b/src/styles/homeproducts.module.css
@@ -1,6 +1,44 @@
 .home_container{
     min-width: 70%;
     width: 100%;
-    background-color: aqua;
-    min-height: 100vh;
+    min-height: 80vh;
+    text-align: center;
+    font-size: 1.4rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding-top: 20px;
+}
+
+.single_product{
+    width: 180px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    background: rgb(245, 245, 245);
+    border: 1px solid rgba(0,0,0,.2);   
+}
+.single_product:hover{
+    background: rgb(235, 235, 235);
+}
+
+.product_image{
+    width: 120px;
+    height: 130px;
+    align-self: center;
+}
+.add_button{
+    width: 120px;
+    align-self: center;
+    height: 25px;
+    border: 1px solid rgba(0,0,0,.5);
+    outline: none;
+    border-radius: 4px;
+}
+.add_button:hover{
+    cursor: pointer;
+}
+.add_button:active{
+    border: 1px solid black;
 }
