--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,7 +1,7 @@
 .navbar{
   width: 100%;
   height: 80px;
-  background:yellow ;
   font-size: 2rem;
   text-align: center;
+  border-bottom: 1px solid rgba(0,0,0,.5);
 }
